# Simple-Login-Registration

./: README.md
MyBlogClient/: BlogUsers.sqlite  CMakeLists.txt  CMakeLists.txt.user.32b4538  CMakeLists.txt.user.95687ab  README.md  authorization.cpp  authorization.h  authorization.ui  blogmainwindow.cpp  blogmainwindow.h  blogmainwindow.ui  registration.cpp  registration.h  registration.ui
MyBlogServer/: CMakeLists.txt  CMakeLists.txt.user.32b4538  CMakeLists.txt.user.95687ab  main.cpp  server.cpp  server.h  server.ui
